Personalized profile description

--- a/src/app/pages/profile.component.html
+++ b/src/app/pages/profile.component.html
@@ -5,12 +5,10 @@
       <!--inserts own profile picture code-by-color #1A1862-->
       <img class="profile" width="100%" align="center" src="/assets/img/profile_pic.jpg">
       <!--adds profile description code-by-color #0F0842-->
-      <p><strong>Shiba Inu</strong></p>
+      <p><strong>Sebastian Späth</strong></p>
       <md-divider></md-divider>
       <p><i>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        No personal image...
       </i></p>
     </md-card>
   </div>
